<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/menu_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/starter_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="16dp"
        android:text="@string/starter"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_imageView"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/main_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="16dp"
        android:text="Main"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starter_checkBox"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/starter_RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_checkBox"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/starter1_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="orderSelected"
            android:paddingLeft="24dp"
            android:text="@string/starter1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/starter2_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="orderSelected"
            android:paddingLeft="24dp"
            android:text="@string/starter2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/starter3_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="orderSelected"
            android:paddingLeft="24dp"
            android:text="@string/starter3"
            android:textSize="16sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/main_RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starter_RadioGroup"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/main1_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="orderSelected"
            android:paddingLeft="24dp"
            android:text="@string/main1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/main2_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="orderSelected"
            android:paddingLeft="24dp"
            android:text="@string/main2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/main3_RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="orderSelected"
            android:paddingLeft="24dp"
            android:text="@string/main3"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/accept_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_RadioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/menu_order_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/final_Order"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accept_Button"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>